Added Files For Autorize

--- a/project-book/index.html
+++ b/project-book/index.html
@@ -81,6 +81,7 @@
         >
           <a class="navbar-brand" href="#">
             <h2>ReadAnd<span>Buy</span></h2>
+            <!-- <img src="assets/images/logo.png" width="200" alt=""> --> 
           </a>
           <button
             class="navbar-toggler"
