--- a/project-book/change-password.html
+++ b/project-book/change-password.html
@@ -15,7 +15,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
     /> -->
-
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao&libraries=places&callback=initMap
+    "
+      async
+      defer
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -105,11 +110,11 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link " href="about.html">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active-self" href="blog.html">Blog</a>
+                <a class="nav-link" href="blog.html">Blog</a>
               </li>
 
               <li class="nav-item dropdown">
@@ -141,81 +146,41 @@
     </header>
 
     <main>
-      <section class="hero-2">
-        <h2>Blog</h2>
-      </section>
+     
 
-      <section class="blog py-5">
-        <div class="container container-self">
-          <h4 class="subtitle text-center">Our Blog</h4>
-          <h2 class="title text-center">Read Our Blog</h2>
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="blog-item">
-                <img
-                  src="assets/images/post-img1.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="blog-top">
-                  <h4>Mar 30, 2021</h4>
-                  <h2>Reading books always makes the moments happy</h2>
-                  <a href="blog-detail.html">Read This Article >></a>
-                </div>
-                <div class="blog-bottom">
-                  <h3>inspiration</h3>
-                  <div class="social-icons">
-                    <i class="fa-brands fa-square-facebook"></i>
-                    <i class="fa-brands fa-square-twitter"></i
-                    ><i class="fa-brands fa-square-instagram"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="blog-item">
-                <img
-                  src="assets/images/post-img1.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="blog-top">
-                  <h4>Mar 30, 2021</h4>
-                  <h2>Reading books always makes the moments happy</h2>
-                  <a href="blog-detail.html">Read This Article >></a>
-                </div>
-                <div class="blog-bottom">
-                  <h3>inspiration</h3>
-                  <div class="social-icons">
-                    <i class="fa-brands fa-square-facebook"></i>
-                    <i class="fa-brands fa-square-twitter"></i
-                    ><i class="fa-brands fa-square-instagram"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="blog-item">
-                <img
-                  src="assets/images/post-img1.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="blog-top">
-                  <h4>Mar 30, 2021</h4>
-                  <h2>Reading books always makes the moments happy</h2>
-                  <a href="blog-detail.html">Read This Article >></a>
+      <section class="py-5 container">
+        <div class="frgt-pass-inner">
+          <div class="row g-5 align-items-center g-4">
+            <div class="col-lg-12">
+              <form method="post" action="/contact">
+                <div class="row g-3">
+                    <div class="col-md-12 position-relative">
+                        <div class="form-floating">
+                          <input type="password" class="form-control" id="password" placeholder="Password" />
+                          <label for="password">Password</label>
+                          <span class="toggle-password position-absolute top-50 end-0 translate-middle-y me-3" data-target="password" style="cursor: pointer;">
+                            <i class="fa-solid fa-eye-slash"></i>
+                          </span>
+                        </div>
+                      </div>
+          
+                      <div class="col-md-12 position-relative">
+                        <div class="form-floating">
+                          <input type="password" class="form-control" id="confirm-password" placeholder="Confirm Password" />
+                          <label for="confirm-password">Confirm Password</label>
+                          <span class="toggle-password position-absolute top-50 end-0 translate-middle-y me-3" data-target="confirm-password" style="cursor: pointer;">
+                            <i class="fa-solid fa-eye-slash"></i>
+                          </span>
+                        </div>
+                      </div>
 
-                </div>
-                <div class="blog-bottom">
-                  <h3>inspiration</h3>
-                  <div class="social-icons">
-                    <i class="fa-brands fa-square-facebook"></i>
-                    <i class="fa-brands fa-square-twitter"></i
-                    ><i class="fa-brands fa-square-instagram"></i>
+                  <div class="col-12">
+                    <button class="btn btn-self by-nw py-3 px-5" type="submit">
+                      Verify
+                    </button>
                   </div>
                 </div>
-              </div>
+              </form>
             </div>
           </div>
         </div>
@@ -278,5 +243,7 @@
     </script> -->
 
     <script src="assets/js/main.js"></script>
+
+    <script></script>
   </body>
 </html>
