--- a/project-book/contact.html
+++ b/project-book/contact.html
@@ -88,7 +88,7 @@
         >
           <a class="navbar-brand" href="index.html">
             <h2>ReadAnd<span>Buy</span></h2>
-          </a>
+            <!-- <img src="assets/images/logo.png" width="200" alt=""> -->          </a>
           <button
             class="navbar-toggler"
             type="button"
